changed font-size:16px to avoid auto zoom on safari

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -124,7 +124,7 @@ ul {
   border-right: 1px solid #ccc;
   outline: none;
   background-color: #F8ECC2;
-  font-size: 14px;
+  font-size: 16px;
   font-family: 'Monaco', courier, monospace;
   padding: 10px;
 }
@@ -134,7 +134,7 @@ ul {
   border-right: 1px solid #ccc;
   outline: none;
   background-color: #F8ECC2;
-  font-size: 14px;
+  font-size: 16px;
   font-family: 'Monaco', courier, monospace;
   padding: 10px; 
 }
@@ -144,7 +144,7 @@ ul {
   border-right: 1px solid #ccc;
   outline: none;
   background-color: #F8ECC2;
-  font-size: 14px;
+  font-size: 16px;
   font-family: 'Monaco', courier, monospace;
   padding: 10px; 
 }
